gobmkida/g1/next_rand
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/next_rand/src/utils/random.c:582:24: error: use of undeclared identifier 'unk_B93F64'
while ( v3 != ( int *)&unk_B93F64 ); 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/next_rand/src/obj/5/random.o] Error 1
